--- a/analysis/prognosis/InitialPrognosis/Survival_deeplearning_final_comp.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Survival_deeplearning_final_comp.ipynb
@@ -227,7 +227,94 @@
       "2019-06-04 12:46:17,020 - Training step 8000/12000  |****************         | - loss: 7.7125 - ci: 0.7218\n",
       "2019-06-04 12:46:17,020 - Training step 8000/12000  |****************         | - loss: 7.7125 - ci: 0.7218\n",
       "2019-06-04 12:46:17,020 - Training step 8000/12000  |****************         | - loss: 7.7125 - ci: 0.7218\n",
-      "2019-06-04 12:46:17,020 - Training step 8000/12000  |****************         | - loss: 7.7125 - ci: 0.7218\n"
+      "2019-06-04 12:46:17,020 - Training step 8000/12000  |****************         | - loss: 7.7125 - ci: 0.7218\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:46:52,569 - Training step 8250/12000  |*****************        | - loss: 7.6656 - ci: 0.7233\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:47:27,703 - Training step 8500/12000  |*****************        | - loss: 7.6420 - ci: 0.7248\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n",
+      "2019-06-04 12:48:03,263 - Training step 8750/12000  |******************       | - loss: 7.6209 - ci: 0.7262\n"
      ]
     }
    ],
