--- a/analysis/prognosis/InitialPrognosis/Untitled1.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Untitled1.ipynb
@@ -78,6 +78,111 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "correlates <- c(\"ahd\",\"perf_status\",\"bm_blasts\",\"secondary\",\"wbc\",\"hb\",\"plt\",\"gender\",\"age\",\"os\",\"os_status\")\n",
+    "\n",
+    "df_all_components <- read.table(\"../../../data/updated_dataset/refined_components_updated.tsv\",sep = '\\t' , header = T)\n",
+    "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
+    "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
+    "rownames(df_initial) <- df_initial$data_pd\n",
+    "df_initial <- df_initial[,-1:-4]\n",
+    "df_eln <- read.table(\"../../../data/updated_dataset/eln_ratio.tsv\",sep = '\\t' , header = T)\n",
+    "rownames(df_eln) <- df_eln$X\n",
+    "df_eln <- df_eln[-1]\n",
+    "df <- merge(df_eln,df_all_components,by=0)\n",
+    "rownames(df) <- df$Row.names\n",
+    "df <- df[-1]\n",
+    "df <- merge(df,df_initial[,correlates],by=0)\n",
+    "rownames(df) <- df$Row.names\n",
+    "df <- df[-1]\n",
+    "df <- df[,c(1:151,157,156,166:176)]\n",
+    "df <- na.omit(df)\n",
+    "df <- df[df$os>0,]\n",
+    "\n",
+    "### To try when component availables: ###\n",
+    "\n",
+    "all_features <-c(1:100) #not used\n",
+    "clin_demo_comp <-c(1:100) #not used\n",
+    "clin_demo_cyto_gen_comp <- c(1:100) #not used\n",
+    "comp <- c(1:100) #not used\n",
+    "cyto_comp <-c(1:100) #not used\n",
+    "cyto_gen_comp <- c(1:100) #not used\n",
+    "eln_clin_demo_comp <- c(1:100) #not used\n",
+    "eln_cyto_comp <- c(1:100) #not used\n",
+    "eln_cyto_gen_comp <- c(1:100) #not used\n",
+    "eln_gen_comp <- c(1:100) #not used\n",
+    "gen_comp <- c(1:100) #not used\n",
+    "clin_comp <- c(1:100) #not used\n",
+    "clin_cyto_comp <- c(1:100) #not used\n",
+    "clin_gen_comp <- c(1:100) #not used\n",
+    "eln_clin_comp <- c(1:100) #not used\n",
+    "### To try now: ###\n",
+    "\n",
+    "###With age:\n",
+    "eln_clin_gen <-  c(1:84,154:160)\n",
+    "eln_demo_gen <- c(1:84,161:162)\n",
+    "eln_clin_demo_cyto_gen <- c(1:162)\n",
+    "eln_clin_demo_cyto <- c(1,85:162)\n",
+    "eln_clin_demo_gen <- c(1:84,154:162)\n",
+    "eln_clin_demo <- c(1,154:162)\n",
+    "eln_clin <- c(1,154:160)\n",
+    "eln_cyto_gen <- c(1:153)\n",
+    "clin_demo_cyto_gen <- c(2:162)\n",
+    "clin_demo_cyto <- c(85:162)\n",
+    "clin_demo_gen <- c(2:84,154:162)\n",
+    "clin_demo <- c(154:162)\n",
+    "cyto_gen <- c(2:153)\n",
+    "cyto <- c(85:153)\n",
+    "gen <- c(2:84)\n",
+    "clin_gen <- c(2:84,154:160)\n",
+    "clin_cyto <- c(85:160)\n",
+    "demo_gen <- c(2:84,161:162)\n",
+    "demo_cyto <- c(85,153,161:162)\n",
+    "\n",
+    "###Without age:\n",
+    "eln_demo_gen_without_age <- c(1:84,161)\n",
+    "eln_clin_demo_cyto_gen_without_age <- c(1:161)\n",
+    "eln_clin_demo_cyto_without_age <- c(1,85:161)\n",
+    "eln_clin_demo_gen_without_age <- c(1:84,154:161)\n",
+    "eln_clin_demo_without_age <- c(1,154:161)\n",
+    "clin_demo_cyto_gen_without_age <- c(2:161)\n",
+    "clin_demo_cyto_without_age <- c(85:161)\n",
+    "clin_demo_gen_without_age <- c(2:84,154:161)\n",
+    "clin_demo_without_age <- c(154:161)\n",
+    "demo_gen_without_age <- c(2:84,161)\n",
+    "demo_cyto_without_age <- c(85,153,161)\n",
+    "\n",
+    "\n",
+    "y <- data.matrix(df_final[,c(\"os\",\"os_status\")])\n",
+    "\n",
+    "prognosis_features<- list(eln_clin_gen=eln_clin_gen,eln_demo_gen=eln_demo_gen,eln_clin_demo_cyto_gen=eln_clin_demo_cyto_gen,eln_clin_demo_cyto=eln_clin_demo_cyto,\n",
+    "                          eln_clin_demo_gen=eln_clin_demo_gen,eln_clin_demo=eln_clin_demo,eln_clin=eln_clin,eln_cyto_gen=eln_cyto_gen,clin_demo_cyto_gen=clin_demo_cyto_gen,\n",
+    "                          clin_demo_cyto=clin_demo_cyto,clin_demo_gen=clin_demo_gen,clin_demo=clin_demo,cyto_gen=cyto_gen,cyto=cyto,gen=gen,clin_gen=clin_gen,clin_cyto=clin_cyto,\n",
+    "                          demo_gen=demo_gen,demo_cyto=demo_cyto,eln_demo_gen_without_age=eln_demo_gen_without_age,eln_clin_demo_cyto_gen_without_age=eln_clin_demo_cyto_gen_without_age,\n",
+    "                          eln_clin_demo_cyto_without_age=eln_clin_demo_cyto_without_age,eln_clin_demo_gen_without_age=eln_clin_demo_gen_without_age,\n",
+    "                          eln_clin_demo_without_age=eln_clin_demo_without_age,clin_demo_cyto_gen_without_age=clin_demo_cyto_gen_without_age,clin_demo_cyto_without_age=clin_demo_cyto_without_age,\n",
+    "                          clin_demo_gen_without_age=clin_demo_gen_without_age,clin_demo_without_age=clin_demo_without_age,demo_gen_without_age=demo_gen_without_age,demo_cyto_without_age=demo_cyto_without_age)\n",
+    "\n",
+    "predictors <- c(rep(list(predictorGLM),11),rep(list(predictorRF),7),predictorBoost,predictorRFX)\n",
+    "str_predictors <-c(rep(\"CoxGLM\",11),rep(\"RFS\",28),\"CoxBoost\",\"RFX\")\n",
+    "l_alpha <-seq(0,1,0.1)\n",
+    "l_ntree <- seq(300,1200,150)\n",
+    "mc.cores <- 8\n",
+    "nodesize <- c(5,10,20,30)\n",
+    "for (i in 1:length(prognosis_features)){\n",
+    "    print(\"DONE\")\n",
+    "    x <- data.matrix(df_final[,prognosis_features[[i]]])\n",
+    "    write.table(launch_prognosis(x=x,y=y,predictors=predictors,str_predictors=str_predictors,l_alpha=l_alpha,nrepeats=2,\n",
+    "                l_ntree=l_ntree,mc.cores=mc.cores,nodesize=nodesize),paste(names(prognosis_features)[i],\".tsv\",sep=\"\"),quote=F,sep='\\t')\n",
+    "    print(\"DONE\")\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
