--- a/analysis/prognosis/InitialPrognosis/Untitled1.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Untitled1.ipynb
@@ -180,6 +180,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "     adverse    favorable intermediate \n",
+       "         741          787          403 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(df$eln_2017_ratio)\n",
+    "df$eln_2017_ratio <- ifelse(df$eln_2017_ratio==\"adverse\",1,\n",
+    "                     ifelse(df$eln_2017_ratio==\"intermediate\",2,3))\n",
+    "write.table(df,\"prognosis_without_comp.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(df,\"prognosis_without_comp.tsv\",sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  1   2   3 \n",
+       "741 403 787 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(read.table(\"prognosis_without_comp.tsv\",sep='\\t')$eln_2017_ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
