--- a/analysis/prognosis/InitialPrognosis/Survival_deeplearning_python.ipynb
+++ b/analysis/prognosis/InitialPrognosis/Survival_deeplearning_python.ipynb
@@ -30,31 +30,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_features = list(range(177))\n",
-    "eln_clin = [0]+list(range(168,175))\n",
-    "eln_clin_demo = [0]+list(range(168,177))\n",
-    "eln_clin_demo_cyto = [0]+list(range(84,153))+list(range(168,177))\n",
-    "eln_clin_demo_gen = list(range(84))+list(range(168,177))\n",
-    "eln_clin_demo_cyto_gen = list(range(153))+list(range(168,177))\n",
-    "eln_clin_demo_comp = [0]+list(range(153,177))\n",
-    "eln_cyto_gen = list(range(153))\n",
-    "eln_cyto_gen_comp = list(range(168))\n",
-    "eln_cyto_comp = [0] + list(range(84,168))\n",
-    "eln_gen_comp = list(range(84)) + list(range(153,168))\n",
+    "all_features = list(range(181))\n",
+    "clin_demo_comp = list(range(153,181)) \n",
+    "clin_demo_cyto_gen_comp = list(range(1,181)) \n",
+    "comp = list(range(162,181) \n",
+    "cyto_comp = list(range(84,153))+list(range(162,181)) \n",
+    "cyto_gen_comp = list(range(1,153))+list(range(162,181)) \n",
+    "eln_clin_demo_comp = [1]+list(range(153,181)) \n",
+    "eln_cyto_comp = [0]+list(range(84,153)+list(range(162,181)) \n",
+    "eln_cyto_gen_comp = list(range(153))+list(range(162,181)) \n",
+    "eln_gen_comp = list(range(84))+list(range(162,181)) \n",
+    "gen_comp = list(range(1,84))+list(range(162,181))\n",
+    "clin_comp = list(range(152,160))+list(range(162,181)) \n",
+    "clin_cyto_comp = list(range(84,160))+list(range(162,181)) \n",
+    "clin_gen_comp = list(range(1,84))+list(range(153,160))+list(range(162:181)) \n",
+    "eln_clin_comp = [0]+list(range(153,160))+list(range(162,181))\n",
     "\n",
-    "clin_demo = list(range(168,177))\n",
-    "clin_demo_cyto = list(range(84,153))+list(range(168,177))\n",
-    "clin_demo_gen = list(range(1,84))+list(range(168,177))\n",
-    "clin_demo_cyto_gen = list(range(1,153))+ list(range(168,177))\n",
-    "clin_demo_comp = list(range(153,177))\n",
-    "cyto_gen = list(range(1,153))\n",
-    "cyto_gen_comp = list(range(1,168))\n",
-    "cyto_comp = list(range(84,168))\n",
-    "gen_comp = list(range(1,84))+list(range(153,168))\n",
-    "clin_demo_cyto_gen_comp = list(range(1,177))\n",
-    "gen = list(range(1,84))\n",
-    "cyto = list(range(84,153))\n",
-    "comp = list(range(153,168))"
+    "#Without age\n",
+    "all_features_without_age = list(range(161))+list(range(162,181))\n",
+    "clin_demo_comp_without_age = list(range(153,161))+list(range(162,181))\n",
+    "clin_demo_cyto_gen_comp_without_age = list(range(1,161))+list(range(162,181))\n",
+    "eln_clin_demo_comp_without_age = [0]+list(range(153,161))+list(range(162,181))\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "#eln_clin_gen = list(range(84))+list(range(153,160))  \n",
+    "#eln_demo_gen = list(range(84))+[160,161] \n",
+    "#eln_clin_demo_cyto_gen =list(range(162)) \n",
+    "#eln_clin_demo_cyto = [0]+list(range(84,162))\n",
+    "#eln_clin_demo_gen = list(range(84))+list(range(153,162))\n",
+    "#eln_clin_demo = [0] + list(range(153,162))\n",
+    "#eln_clin = [0] + list(range(153,160))\n",
+    "#eln_cyto_gen = list(range(153))\n",
+    "#clin_demo_cyto_gen = list(range(1,162))\n",
+    "#clin_demo_cyto = list(range(84,162))\n",
+    "#clin_demo_gen = list(range(1,84))+list(range(153,162)) \n",
+    "#clin_demo = list(range(153,162)) \n",
+    "#cyto_gen = list(range(1,153))\n",
+    "#cyto = list(range(84,153))\n",
+    "#gen = list(range(1,84))\n",
+    "#clin_gen = list(range(1,84)) + list(range(153,160))  \n",
+    "#clin_cyto = list(range(84,160))  \n",
+    "#demo_gen = list(range(1,84)) + [160,161]\n",
+    "#demo_cyto = list(range(84,153)) + [160,161]\n",
+    "\n",
+    "###Without age:\n",
+    "\n",
+    "#eln_demo_gen_without_age = list(range(84)) + [160]\n",
+    "#eln_clin_demo_cyto_gen_without_age = list(range(161))\n",
+    "#eln_clin_demo_cyto_without_age = [0] + list(range(84,161))\n",
+    "#eln_clin_demo_gen_without_age = list(range(84)) + list(range(153,161))\n",
+    "#eln_clin_demo_without_age = [0] + list(range(153,161))\n",
+    "#clin_demo_cyto_gen_without_age = list(range(1,161))\n",
+    "#clin_demo_cyto_without_age = list(range(84,161))\n",
+    "#clin_demo_gen_without_age = list(range(1,84)) + list(range(153,161)) \n",
+    "#clin_demo_without_age = list(range(153,161))\n",
+    "#demo_gen_without_age = list(range(1,84)) + [160]\n",
+    "#demo_cyto_without_age = list(range(84,153)) + [160]"
    ]
   },
   {
@@ -95,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +256,8 @@
    "outputs": [],
    "source": [
     "hid_layers=[[100,100],[100,100,10],[100,500,10],[25,100,10],[500,100,100],[500,100]]*4+[[100,25]]\n",
+    "\n",
     "l2_reg=[10.0]*12+[1.0]*12+[10.0]\n",
-    "#drop=(([0.2]*6+[0.4]*6)*2+[0.4])*2\n",
     "act=(['rectify']*6+['selu']*6)*2+['selu']\n",
     "network=[None]*25\n",
     "metrics=[None]*25\n",
