--- a/analysis/prognosis/InitialPrognosis/cluster_scripts/Untitled.ipynb
+++ b/analysis/prognosis/InitialPrognosis/cluster_scripts/Untitled.ipynb
@@ -146,7 +146,9 @@
     "colnames(y) = c(\"time\",\"status\")\n",
     "response=y\n",
     "\n",
-    "prognosis_features<- list(gen_age=gen_age)\n",
+    "prognosis_features<- list(gen_age=gen_age,eln_clin_gen=eln_clin_gen,eln_demo_gen=eln_demo_gen,eln_clin_demo_cyto_gen=eln_clin_demo_cyto_gen,eln_clin_demo_cyto=eln_clin_demo_cyto,eln_clin_demo_gen=eln_clin_demo_gen,eln_clin_demo=eln_clin_demo,eln_clin=eln_clin,eln_cyto_gen=eln_cyto_gen,\n",
+    "                         clin_demo_cyto_gen=clin_demo_cyto_gen,clin_demo_cyto=clin_demo_cyto,clin_demo_gen=clin_demo_gen,clin_demo=clin_demo,cyto_gen=cyto_gen,cyto=cyto,gen=gen,clin_gen=clin_gen,clin_cyto=clin_cyto,demo_gen=demo_gen,demo_cyto=demo_cyto,\n",
+    "                         all_features_without_age=all_features_without_age,clin_demo_comp_without_age=clin_demo_comp_without_age,clin_demo_cyto_gen_comp_without_age=clin_demo_cyto_gen_comp_without_age,eln_clin_demo_comp_without_age=eln_clin_demo_comp_without_age)\n",
     "\n",
     "\n",
     "algos <-c(\"glm\",\"rfs\",\"boost\",\"rfx\")\n",
