--- a/analysis/prognosis/Feature_Importance_Reshuffle/Reshuffle_SVM.ipynb
+++ b/analysis/prognosis/Feature_Importance_Reshuffle/Reshuffle_SVM.ipynb
@@ -1323,11 +1323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"SVM_tmp1.cs\")"
+    "df.to_csv(\"SVM_tmp1.csv\")"
    ]
   },
   {
