--- a/analysis/prognosis/Prognosis_final_July/Bootstrap_coef/Bootstrap.ipynb
+++ b/analysis/prognosis/Prognosis_final_July/Bootstrap_coef/Bootstrap.ipynb
@@ -2,18 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in `[.data.frame`(df_final, , gen): object 'gen' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in `[.data.frame`(df_final, , gen): object 'gen' not found\nTraceback:\n",
-      "1. apply(X = df_final[, gen], 2, FUN = function(x) 100 * length(which(x == \n .     1))/dim(df_final)[1])",
-      "2. df_final[, gen]",
-      "3. `[.data.frame`(df_final, , gen)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0\n",
+      "[1] \"glm\"\n",
+      "[1] \"Start Bootstrapping\"\n",
+      "[1] \"eln_age_bootstrap_glm_0.tsv\"\n",
+      "[1] 0.7\n",
+      "[1] \"glm\"\n",
+      "[1] \"Start Bootstrapping\"\n",
+      "[1] \"eln_age_bootstrap_glm_0.7.tsv\"\n",
+      "[1] \"age\"            \"eln_2017_ratio\"\n",
+      "[1] \"DONE\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"start CV\"\n",
+      "[1] \"DONE\"\n",
+      "[1] 1\n",
+      "[1] \"glm\"\n",
+      "[1] \"Start Bootstrapping\"\n",
+      "[1] \"eln_age_bootstrap_glm_1.tsv\"\n"
      ]
     }
    ],
@@ -152,71 +176,9 @@
     "\n",
     "\n",
     "clin_age <-c(clin,age)\n",
-    "\n",
-    "\n",
-    "\n",
-    "bootstrapping <- function(features=all_features,x,y,n_exp=100,alpha=0.7,mc.cores=30,model=\"glm\"){\n",
-    "    set.seed(17)\n",
-    "    res_bootstrap <- data.frame('feature' = character(),\n",
-    "                      'coef' = numeric())\n",
-    "    design=x[,features]\n",
-    "    n = nrow(design)\n",
-    "    folds <- list()\n",
-    "\n",
-    "    for (i in seq(n_exp)) {\n",
-    "        folds[[i]] <- sample(1:n, 0.8 * n, replace = TRUE)\n",
-    "    }\n",
-    "\n",
-    "    nexp = length(folds)\n",
-    "    print(\"Start Bootstrapping\")\n",
-    "    rescv = mclapply(seq(nexp),\n",
-    "                   FUN=function(iexp) {\n",
-    "                       set.seed(17)\n",
-    "                       cat(\".\")\n",
-    "                       x_sampling = design[folds[[iexp]],]\n",
-    "                       y_sampling = y[folds[[iexp]],]\n",
-    "                       if (model==\"glm\"){\n",
-    "                           cvfit <- cv.glmnet(x_sampling, y_sampling, family = 'cox', alpha=alpha, nfolds = 20, grouped = TRUE)\n",
-    "                           tmp <- as.data.frame(as.matrix(coef(cvfit, s = \"lambda.min\")))\n",
-    "                       } else if (model==\"boost\"){\n",
-    "                           cvfit<-CoxBoost(time=y_sampling[,1],status=y_sampling[,2],x=x_sampling)\n",
-    "                           tmp <- as.data.frame(as.matrix(coefficients(cvfit)))\n",
-    "                       } else if (model==\"rfx\"){\n",
-    "                           cvfit<-CoxRFX(data.frame(x_sampling),Surv(time=y_sampling[,1],event=y_sampling[,2]) , max.iter =50,tol=1e-3)\n",
-    "                           tmp <- as.data.frame(as.matrix(coef(cvfit)))\n",
-    "                       } else if (model==\"rfs\"){\n",
-    "                           cvfit <- rfsrc(Surv(time, status) ~ ., data=data.frame(x_sampling,y_sampling), ntree=1050, importance=\"TRUE\",nodesize=20)\n",
-    "                           tmp <- as.data.frame(as.matrix(cvfit$importance))\n",
-    "                       }\n",
-    "                       colnames(tmp) <- 'coef'\n",
-    "                       tmp <- rownames_to_column(tmp, var = 'feature')\n",
-    "\n",
-    "\n",
-    "                   },\n",
-    "                   mc.cores=50\n",
-    "                   )\n",
-    "\n",
-    "    for(i in 1:length(rescv)){\n",
-    "        res_bootstrap <- rbind(res_bootstrap,rescv[[i]])\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "    res_bootstrap <- res_bootstrap[res_bootstrap$coef != 0,]\n",
-    "    return (res_bootstrap)\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "x <- data.matrix(df_final)\n",
-    "y <- data.matrix(df_final[,c(\"os\",\"os_status\")])\n",
-    "\n",
-    "colnames(y) = c(\"time\",\"status\")\n",
-    "response=y\n",
-    "\n",
-    "prognosis_features <- c(eln_age=eln_age)\n",
-    "\n",
-    "\n",
+    "              \n",
+    "              \n",
+    "prognosis_features <- list(eln_age=eln_age)\n",
     "#algos <-c(\"glm\",\"rfs\",\"boost\",\"rfx\")\n",
     "algos <- c(\"glm\")\n",
     "alphas=c(0,0.7,1)\n",
@@ -226,7 +188,7 @@
     "            for (alpha in alphas){\n",
     "                print(alpha)\n",
     "                print(algo)\n",
-    "                bootstrap <- bootstrapping(prognosis_features[[i]],x,y,10,alpha,8,algo)  #####100\n",
+    "                bootstrap <- bootstrapping(prognosis_features[[i]],x,y,100,alpha,8,algo)\n",
     "                tmp_1 <- bootstrap  %>% group_by(feature) %>% summarise_all(sum)\n",
     "                tmp_2 <- bootstrap  %>% group_by(feature) %>% count(feature)\n",
     "                print(paste(paste(names(prognosis_features)[i],paste(algo,alpha,sep=\"_\"),sep=\"_bootstrap_\"),\".tsv\",sep=\"\"))\n",
