--- a/analysis/prognosis/Prognosis_final_July/Prognosis_results/Untitled.ipynb
+++ b/analysis/prognosis/Prognosis_final_July/Prognosis_results/Untitled.ipynb
@@ -545,13 +545,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
+       "\t<li>'eln_2017_ratio'</li>\n",
        "\t<li>'ASXL1'</li>\n",
        "\t<li>'BCOR'</li>\n",
        "\t<li>'CBL'</li>\n",
@@ -591,6 +592,7 @@
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
+       "\\item 'eln\\_2017\\_ratio'\n",
        "\\item 'ASXL1'\n",
        "\\item 'BCOR'\n",
        "\\item 'CBL'\n",
@@ -629,54 +631,55 @@
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 'ASXL1'\n",
-       "2. 'BCOR'\n",
-       "3. 'CBL'\n",
-       "4. 'CEBPA_bi'\n",
-       "5. 'CEBPA_mono'\n",
-       "6. 'DNMT3A'\n",
-       "7. 'EZH2'\n",
-       "8. 'ITD'\n",
-       "9. 'FLT3_TKD'\n",
-       "10. 'FLT3_other'\n",
-       "11. 'GATA2'\n",
-       "12. 'IDH1'\n",
-       "13. 'IDH2_p.R140'\n",
-       "14. 'IDH2_p.R172'\n",
-       "15. 'KIT'\n",
-       "16. 'KRAS'\n",
-       "17. 'MLL'\n",
-       "18. 'MYC'\n",
-       "19. 'NF1'\n",
-       "20. 'NPM1'\n",
-       "21. 'NRAS_p.G12_13'\n",
-       "22. 'NRAS_p.Q61_62'\n",
-       "23. 'PHF6'\n",
-       "24. 'PTPN11'\n",
-       "25. 'RAD21'\n",
-       "26. 'RUNX1'\n",
-       "27. 'SF3B1'\n",
-       "28. 'SMC1A'\n",
-       "29. 'SMC3'\n",
-       "30. 'SRSF2'\n",
-       "31. 'STAG2'\n",
-       "32. 'TET2'\n",
-       "33. 'TP53'\n",
-       "34. 'U2AF1_p.S34'\n",
-       "35. 'WT1'\n",
+       "1. 'eln_2017_ratio'\n",
+       "2. 'ASXL1'\n",
+       "3. 'BCOR'\n",
+       "4. 'CBL'\n",
+       "5. 'CEBPA_bi'\n",
+       "6. 'CEBPA_mono'\n",
+       "7. 'DNMT3A'\n",
+       "8. 'EZH2'\n",
+       "9. 'ITD'\n",
+       "10. 'FLT3_TKD'\n",
+       "11. 'FLT3_other'\n",
+       "12. 'GATA2'\n",
+       "13. 'IDH1'\n",
+       "14. 'IDH2_p.R140'\n",
+       "15. 'IDH2_p.R172'\n",
+       "16. 'KIT'\n",
+       "17. 'KRAS'\n",
+       "18. 'MLL'\n",
+       "19. 'MYC'\n",
+       "20. 'NF1'\n",
+       "21. 'NPM1'\n",
+       "22. 'NRAS_p.G12_13'\n",
+       "23. 'NRAS_p.Q61_62'\n",
+       "24. 'PHF6'\n",
+       "25. 'PTPN11'\n",
+       "26. 'RAD21'\n",
+       "27. 'RUNX1'\n",
+       "28. 'SF3B1'\n",
+       "29. 'SMC1A'\n",
+       "30. 'SMC3'\n",
+       "31. 'SRSF2'\n",
+       "32. 'STAG2'\n",
+       "33. 'TET2'\n",
+       "34. 'TP53'\n",
+       "35. 'U2AF1_p.S34'\n",
+       "36. 'WT1'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       " [1] \"ASXL1\"         \"BCOR\"          \"CBL\"           \"CEBPA_bi\"     \n",
-       " [5] \"CEBPA_mono\"    \"DNMT3A\"        \"EZH2\"          \"ITD\"          \n",
-       " [9] \"FLT3_TKD\"      \"FLT3_other\"    \"GATA2\"         \"IDH1\"         \n",
-       "[13] \"IDH2_p.R140\"   \"IDH2_p.R172\"   \"KIT\"           \"KRAS\"         \n",
-       "[17] \"MLL\"           \"MYC\"           \"NF1\"           \"NPM1\"         \n",
-       "[21] \"NRAS_p.G12_13\" \"NRAS_p.Q61_62\" \"PHF6\"          \"PTPN11\"       \n",
-       "[25] \"RAD21\"         \"RUNX1\"         \"SF3B1\"         \"SMC1A\"        \n",
-       "[29] \"SMC3\"          \"SRSF2\"         \"STAG2\"         \"TET2\"         \n",
-       "[33] \"TP53\"          \"U2AF1_p.S34\"   \"WT1\"          "
+       " [1] \"eln_2017_ratio\" \"ASXL1\"          \"BCOR\"           \"CBL\"           \n",
+       " [5] \"CEBPA_bi\"       \"CEBPA_mono\"     \"DNMT3A\"         \"EZH2\"          \n",
+       " [9] \"ITD\"            \"FLT3_TKD\"       \"FLT3_other\"     \"GATA2\"         \n",
+       "[13] \"IDH1\"           \"IDH2_p.R140\"    \"IDH2_p.R172\"    \"KIT\"           \n",
+       "[17] \"KRAS\"           \"MLL\"            \"MYC\"            \"NF1\"           \n",
+       "[21] \"NPM1\"           \"NRAS_p.G12_13\"  \"NRAS_p.Q61_62\"  \"PHF6\"          \n",
+       "[25] \"PTPN11\"         \"RAD21\"          \"RUNX1\"          \"SF3B1\"         \n",
+       "[29] \"SMC1A\"          \"SMC3\"           \"SRSF2\"          \"STAG2\"         \n",
+       "[33] \"TET2\"           \"TP53\"           \"U2AF1_p.S34\"    \"WT1\"           "
       ]
      },
      "metadata": {},
